base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: welcome-app
  name: welcome-app
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: welcome-app
    weight: null
status: {}
